--- a/style.css
+++ b/style.css
@@ -1,67 +1,26 @@
-.container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-body{
-    background-color: grey;
+body {
+  background-color: black !important;
 }
-.logo-card{
-    background-color: white;
-    border-radius: 10px;
-    padding: 10px;
-    height: 15vh;
-    width: 125vh;
-    margin: 5px;
+.centre-box {
+  background-color: white !important;
+  border-radius: 4px;
+  padding: 20px;
+  height: 540px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 100px;
+  margin-right: 100px;
 }
-.main-card{
-    background-color: white;
-    border-radius: 10px;
-    padding: 10px;
-    margin: 5px;
-    width: 125vh;
-    height: 70vh;
+.header-part {
+  margin-bottom: 20px;
 }
-.logo{
-    height: 80px;
+.logo {
+  height: 100px;
+  width: auto;
 }
-
-.navbar-buttons {
-    position: relative;
-    background-color: black;
-    border: none;
-    font-size: 18px;
-    color: #FFFFFF;
-    padding: 5px;
-    border-radius: 5px;
-    width: auto
-    text-align: center;
-    transition-duration: 0.4s;
-    text-decoration: none;
-    overflow: hidden;
-    cursor: pointer;
-  }
-  
-  .navbar-buttons:after {
-    content: "";
-    background: #f1f1f1;
-    display: block;
-    position: absolute;
-    padding-top: 300%;
-    padding-left: 350%;
-    margin-left: -20px !important;
-    margin-top: -120%;
-    opacity: 0;
-    transition: all 0.8s
-  }
-  
-  .navbar-buttons:active:after {
-    padding: 0;
-    margin: 0;
-    opacity: 1;
-    transition: 0s
-
-  }
-
+.my-btn {
+  background-color: black;
+  color: white;
+  border: 0px;
+  padding: 4px;
+}
